@@ -1,5 +1,6 @@
 Version 1.21.3
 ==================
+- Added functionality to store and restore the bookmarks.
 - Fixed a crash when renaming a project and a GDX viewer is open.
 - Fixed that Studio window size isn't restored on macOS.
 - Fixed missing DCO $onEmbeddedCode in completer.
